# Invoice-renaming-automation

./: CLIENT_DELIVERY_PACKAGE.md  CLIENT_README.md  COMPLETE_WORKFLOW_GUIDE.md  DELIVERY_SUMMARY.md  PACKAGE_OVERVIEW.md  README.md  gpu_aware_ocr_solution.py  install.sh  main.py  mcp_filesystem_server.py  mcp_invoice_extraction_server.py  process_folder.sh  pyproject.toml  requirements.txt  simple_flask_server.py  test_system.sh  verify_installation.sh
src/invoice_team/: FlaskTeam.Dockerfile  flask_server.py  main_logic.py
